--- a/index.html
+++ b/index.html
@@ -1,170 +1,226 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <title>D-ID Streaming POC</title>
+    <!-- added google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <title>D-ID Streaming POC</title>
-  <!-- added google fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        background-color: #000;
+        color: #fff;
+      }
 
-  <style>
-    .peerConnectionState-new {
-      color: cornflowerblue;
-    }
-    .peerConnectionState-connecting {
-      color: orange;
-    }
-    .peerConnectionState-connected {
-      color: green;
-    }
-    .peerConnectionState-disconnected,
-    .peerConnectionState-closed,
-    .peerConnectionState-failed {
-      color: red;
-    }
+      /* Define the different connection state colors */
+      .state-new {
+        color: #1abc9c;
+      }
+      .state-connecting {
+        color: #f39c12;
+      }
+      .state-connected {
+        color: #2ecc71;
+      }
+      .state-disconnected,
+      .state-closed,
+      .state-failed {
+        color: #e74c3c;
+      }
 
-    .iceConnectionState-new {
-      color: cornflowerblue;
-    }
-    .iceConnectionState-checking {
-      color: orange;
-    }
-    .iceConnectionState-connected,
-    .iceConnectionState-completed {
-      color: green;
-    }
-    .peerConnectionState-disconnected,
-    .peerConnectionState-closed,
-    .peerConnectionState-failed {
-      color: red;
-    }
+      .state-checking {
+        color: #f39c12;
+      }
 
-    .iceGatheringState-new {
-      color: cornflowerblue;
-    }
-    .iceGatheringState-gathering {
-      color: orange;
-    }
-    .iceGatheringState-complete {
-      color: black;
-    }
+      .state-completed {
+        color: #2ecc71;
+      }
 
-    .signalingState-stable {
-      color: green;
-    }
-    .signalingState-have-local-offer,
-    .signalingState-have-remote-offer,
-    .signalingState-have-local-pranswer,
-    .signalingState-have-remote-pranswer {
-      color: cornflowerblue;
-    }
-    .signalingState-closed {
-      color: red;
-    }
+      .state-stable {
+        color: #2ecc71;
+      }
+
+      .state-offer {
+        color: #1abc9c;
+      }
+
+      /* added css from here */
+
+      body * {
+        font-family: "Mulish", sans-serif;
+        text-align: center;
+        color: #fff; /* white text */
+      }
+
+      #content {
+        width: 1000px;
+        position: relative;
+        margin: 0 auto;
+      }
+
+      #buttons {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        padding: 20px 0;
+      }
+
+      button {
+        padding: 15px;
+        border-radius: 50%;
+        border: none;
+        font-size: 16px;
+        margin: 0 5px;
+        color: #fff;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      button#connect-button {
+        background-color: #2ecc71; /* green */
+      }
+
+      button#talk-button {
+        background-color: #f39c12; /* orange */
+      }
+
+      button#destroy-button {
+        background-color: #e74c3c; /* red */
+      }
+
+      button#mute-button {
+        background-color: gray; /* red */
+      }
+
+      button:hover {
+        opacity: 0.8;
+        cursor: pointer;
+        transition: all 0.2s ease-out;
+      }
+
+      button#mute-button:hover {
+        background-color: #f16f60; /* red */
+      }
+
+      #status {
+        clear: both;
+        padding: 70px 0 0 0;
+        text-align: left;
+        display: inline-block;
+        zoom: 1;
+        line-height: 140%;
+        font-size: 15px;
+      }
+
+      #status div {
+        padding-bottom: 10px;
+      }
 
 
-    /* added css from here */
+      #video-wrapper{
+        background:url(bg.png);
+        height:500px;
+        width: 900px;
+        background-position: top;
+      }
 
-    body *{
-      font-family: 'Mulish', sans-serif;
-      text-align: center;
-    }
+      #video-wrapper div{
+        width:300px;
+        margin:0 auto;
+        padding:50px 0 0 0;
+      }
 
-    #content{
-     width:820px;
-     position: relative;
-     margin:0 auto; 
-    }
-    
-    #buttons{
-      clear:both;
-      padding:0 0 0 0;
-      text-align: center;
-    }
+      #video-wrapper video{
+        display:block;
+        /*border:1px solid;*/
+        border-radius: 5%;
+        background-color: #fff;
+      }
 
-    button{
-      padding:10px 20px;
-      border-radius: 5px;
-      border:none;
-      font-size: 16px;
-      margin:0 5px;
-      background-color: #7459FE;
-      color: #fff;
-    }
+      #local-video-wrapper {
+        position: absolute;
+        bottom: -25px;
+        right: -200px;
+        width: 300px;
+        height: 200px;
+        /* border: 2px solid white; */
+        border-radius: 5%;
+        overflow: hidden;
+        z-index: 1;
+      }
 
-    button:hover{
-      background-color: #9480FF;
-      cursor: pointer;
-      transition: all 0.2s ease-out;
-    }
+      #local-video-wrapper video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
+  </head>
 
-    #status{
-      clear:both;
-      padding:20px 0 0 0 ;
-      text-align: left;
-      display: inline-block;
-      zoom: 1;
-      line-height: 140%;
-      font-size: 15px;
-    }
-
-    #status div{
-      padding-bottom: 10px;
-    }
-
-    #video-wrapper{
-      background:url(bg.png);
-      height:500px;
-      background-position: top;
-    }
-
-    #video-wrapper div{
-      width:400px;
-      margin:0 auto;
-      padding:50px 0 0 0;
-    }
-    video{
-      display:block;
-      /*border:1px solid;*/
-      border-radius: 50%;
-      background-color: #fff;
-    }
-  </style>
-</head>
-
-<body>
-  <!-- adde "id=content" -->
-  <div id="content">
-      
+  <body>
+    <!-- added "id=content" -->
+    <div id="content">
       <!-- added "id=video-wrapper" -->
       <div id="video-wrapper">
         <div>
-          <video id="talk-video" width=400 height=400 autoplay></video>
+          <video id="talk-video" width="400" height="400" autoplay></video>
         </div>
       </div>
-      <br>
+      <br />
+
+      <!-- added element to display local video stream -->
+      <div id="local-video-wrapper">
+        <div>
+          <video
+            id="local-video"
+            width="500"
+            height="250"
+            autoplay
+            muted
+          ></video>
+        </div>
+      </div>
 
       <!-- added div#buttons -->
       <div id="buttons">
-      <button id="connect-button" type="button">Connect</button>
-      <button id="talk-button" type="button">Start</button>
-      <button id="destroy-button" type="button">Destroy</button>
-    </div>
-  
-    <!-- added div#status -->
+        <button id="connect-button" type="button">
+          <i class="fas fa-phone"></i>
+        </button>
+        <button id="talk-button" type="button">
+          <i class="fas fa-volume-up"></i>
+        </button>
+        <button id="destroy-button" type="button">
+          <i class="fas fa-phone-slash"></i>
+        </button>
+        <button id="mute-button" type="button">
+          <i class="fas fa-microphone"></i>
+        </button>
+      </div>
+
+      <!-- added div#status -->
       <div id="status">
-      <!-- removed the wrapping <div> tags -->
-      ICE gathering status: <label id="ice-gathering-status-label"></label><br>
-      ICE status: <label id="ice-status-label"></label><br>
-      Peer connection status: <label id="peer-status-label"></label><br>
-      Signaling status: <label id="signaling-status-label"></label><br>
+        <!-- removed the wrapping <div> tags -->
+        Finding an available therapist:
+        <label id="ice-gathering-status-label"></label><br />
+        Therapist found: <label id="ice-status-label"></label><br />
+        Therapist Accepted the request: <label id="peer-status-label"></label
+        ><br />
+        Therapist is ready to video-call:
+        <label id="signaling-status-label"></label><br />
+      </div>
     </div>
-  </div>
 
-  <script type="module" src="./index.js"></script>
-
-
-</body>
-
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
