--- a/index.html
+++ b/index.html
@@ -99,18 +99,10 @@
         background-color: #e74c3c; /* red */
       }
 
-      button#mute-button {
-        background-color: gray; /* red */
-      }
-
       button:hover {
         opacity: 0.8;
         cursor: pointer;
         transition: all 0.2s ease-out;
-      }
-
-      button#mute-button:hover {
-        background-color: #f16f60; /* red */
       }
 
       #status {
@@ -195,16 +187,13 @@
       <!-- added div#buttons -->
       <div id="buttons">
         <button id="connect-button" type="button">
-          <i class="fas fa-phone"></i>
+          <i class="fa fa-phone"></i>
         </button>
         <button id="talk-button" type="button">
           <i class="fas fa-volume-up"></i>
         </button>
         <button id="destroy-button" type="button">
-          <i class="fas fa-phone-slash"></i>
-        </button>
-        <button id="mute-button" type="button">
-          <i class="fas fa-microphone"></i>
+          <i class="fa fa-phone-slash"></i>
         </button>
       </div>
 
