--- a/index.html
+++ b/index.html
@@ -187,19 +187,17 @@
       <!-- added div#buttons -->
       <div id="buttons">
         <button id="connect-button" type="button">
-          <i class="fa fa-phone"></i>
+          <i class="fa-solid fa fa-phone fa-rotate-90"></i>
         </button>
         <button id="talk-button" type="button">
-          <i class="fas fa-volume-up"></i>
+          <i class="fa fa-volume-up"></i>
         </button>
         <button id="destroy-button" type="button">
-          <i class="fa fa-phone-slash"></i>
+          <i class="fa fa-phone-slash fa-rotate-90"></i>
         </button>
       </div>
 
-      <!-- added div#status -->
       <div id="status">
-        <!-- removed the wrapping <div> tags -->
         Finding an available therapist:
         <label id="ice-gathering-status-label"></label><br />
         Therapist found: <label id="ice-status-label"></label><br />
